--- a/sfeos-web/src/components/StacCollectionDetails.css
+++ b/sfeos-web/src/components/StacCollectionDetails.css
@@ -27,9 +27,13 @@
   font-weight: 500;
 }
 
-.stac-details-expanded {
+.description {
+  margin-bottom: 10px;
+}
+
+.description .stac-details-expanded {
   position: absolute;
-  top: 145px;
+  top: 160px;
   left: 0px;
   z-index: 1001;
   background-color: rgba(255, 255, 255, 0.85);
@@ -42,13 +46,47 @@
   overflow-y: auto;
 }
 
-.stac-details-expanded h4 {
+.description .stac-details-expanded h4 {
   margin: 0 0 10px 0;
   font-size: 0.8rem;
   color: #333;
 }
 
-.stac-details-expanded p {
+.description .stac-details-expanded p {
+  margin: 0 0 1px 0;
+  font-size: 0.6rem;
+  color: #666;
+  line-height: 1.4;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.bounding-box {
+  margin-bottom: 10px;
+}
+
+.bounding-box .stac-details-expanded {
+  position: absolute;
+  top: 160px;
+  left: 0px;
+  z-index: 1001;
+  background-color: rgba(255, 255, 255, 0.55);
+  padding: 15px;
+  border-radius: 8px;
+  width: 280px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.bounding-box .stac-details-expanded h4 {
+  margin: 0 0 10px 0;
+  font-size: 0.8rem;
+  color: #333;
+}
+
+.bounding-box .stac-details-expanded p {
   margin: 0 0 1px 0;
   font-size: 0.6rem;
   color: #666;
