--- a/sfeos-web/src/App.css
+++ b/sfeos-web/src/App.css
@@ -1,5 +1,17 @@
+html, body, #root, .App {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
