--- a/sfeos-web/src/components/StacCollectionDetails.css
+++ b/sfeos-web/src/components/StacCollectionDetails.css
@@ -95,6 +95,64 @@
   overflow-wrap: break-word;
 }
 
+.query-items {
+  margin-bottom: 10px;
+}
+
+.query-items .stac-details-expanded {
+  position: absolute;
+  top: 200px;
+  left: 0px;
+  z-index: 1001;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 15px;
+  border-radius: 8px;
+  width: 280px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.query-items .stac-details-expanded h4 {
+  margin: 0 0 10px 0;
+  font-size: 0.8rem;
+  color: #333;
+}
+
+.query-items .stac-details-expanded p {
+  margin: 0 0 1px 0;
+  font-size: 0.6rem;
+  color: #666;
+  line-height: 1.4;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.query-items .stac-details-expanded ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.query-items .stac-details-expanded li {
+  margin-bottom: 8px;
+  font-size: 0.6rem;
+  color: #666;
+}
+
+.item-bbox-details {
+  margin-top: 5px;
+  padding: 5px;
+  background-color: rgba(200, 200, 200, 0.2);
+  border-radius: 4px;
+}
+
+.item-bbox-details p {
+  margin: 0;
+  font-size: 0.55rem;
+}
+
 .stac-zoom-btn {
   width: 100%;
   padding: 6px 6px;
