--- a/sfeos-web/src/components/QueryItems.css
+++ b/sfeos-web/src/components/QueryItems.css
@@ -4,10 +4,10 @@
 
 .query-items .stac-details-expanded {
   position: absolute;
-  top: 200px;
+  top: 185px;
   left: 0px;
   z-index: 1001;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(255, 255, 255, 0.65);
   padding: 15px;
   border-radius: 8px;
   width: 280px;
@@ -15,6 +15,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
   max-height: 300px;
   overflow-y: auto;
+  text-align: left;
 }
 
 .query-items .stac-details-expanded h4 {
