--- a/sfeos-web/src/components/StacCollectionDetails.css
+++ b/sfeos-web/src/components/StacCollectionDetails.css
@@ -44,6 +44,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
   max-height: 300px;
   overflow-y: auto;
+  text-align: left;
 }
 
 .description .stac-details-expanded h4 {
@@ -67,6 +68,7 @@
 
 .bounding-box .stac-details-expanded {
   position: absolute;
+  text-align: left;
   top: 185px;
   left: 0px;
   z-index: 1001;
@@ -88,30 +90,18 @@
 
 .bounding-box .stac-details-expanded p {
   margin: 0 0 1px 0;
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   color: #666;
   line-height: 1.4;
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
 
-.item-bbox-details {
-  margin-top: 5px;
-  padding: 5px;
-  background-color: rgba(200, 200, 200, 0.2);
-  border-radius: 4px;
-}
-
-.item-bbox-details p {
-  margin: 0;
-  font-size: 0.55rem;
-}
-
 .stac-zoom-btn {
   width: 100%;
   padding: 6px 6px;
   margin-top: 10px;
-  background-color: #002145;
+  background-color: rgba(0, 33, 69, 0.8);
   color: white;
   border: none;
   border-radius: 4px;
