--- a/sfeos-web/src/components/StacCollectionSelector.css
+++ b/sfeos-web/src/components/StacCollectionSelector.css
@@ -3,10 +3,11 @@
   top: 130px;
   left: 20px;
   z-index: 1000;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.7);
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
   padding: 15px;
+  padding-bottom: 2px;
   width: 280px;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -46,7 +47,7 @@
 }
 
 .stac-selector {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .stac-select {
